# Robotica

astar_planning/: CMakeLists.txt  package.xml
astar_planning/coppeliaSim/: path_planning.ttt
astar_planning/launch/: astar_planning.launch.py  astar_planning.rviz
astar_planning/src/: AStarPlanner.cpp  AStarPlanner.h  astar_planning_node.cpp
imu_laser/src/: imu_calibrator.cpp  landmark_detector.cpp
lazo_abierto/coppeliaSim/: lazo_abierto.ttt
lazo_abierto/launch/: lazo_abierto.launch.py
lazo_abierto/src/: FeedForwardController.cpp  TrajectoryFollower.cpp  trajectory_generator_node.cpp
lazo_cerrado/src/: KinematicPositionController.cpp
mascosas/: lazo_abierto.launch.py  pioneer_odometry.cpp
modelo_diferencial/src/: pioneer_odometry.cpp
robmovil_planning/: CMakeLists.txt  package.xml
robmovil_planning/include/robmovil_planning/: GridPlanner.h
robmovil_planning/src/: GridPlanner.cpp  GridPlannerNode.cpp
rrt_pioneer_planning/: CMakeLists.txt  package.xml
rrt_pioneer_planning/coppeliaSim/: rrt_pioneer_planning.ttt  rrt_pioneer_planning_dificil.ttt
rrt_pioneer_planning/launch/: rrt_pioneer_planning.launch.py  rrt_pioneer_planning.rviz
rrt_pioneer_planning/scripts/: graph_rrt.py
rrt_pioneer_planning/src/: PioneerRRTPlanner.cpp  PioneerRRTPlanner.h  rrt_pioneer_planning_node.cpp
rrt_planning/: CMakeLists.txt  package.xml
rrt_planning/include/rrt_planning/: RRTPlanner.h  RRTPlanner.tpp
